--- a/index.html
+++ b/index.html
@@ -61,19 +61,23 @@
 
         <section id="page-result" class="page result-layout">
             <div class="image-frame-wrapper">
-                <img id="result-img" src="" alt="말씀 카드">
+                <img id="result-img" src="" alt="말씀 카드" style="cursor: zoom-in;">
             </div>
             
             <div class="result-actions">
-                <div class="button-group-sub">
+                <div class="button-row">
                     <button id="btn-download" class="action-btn dark-btn">⬇ 저장</button>
-                    <button id="btn-share" class="action-btn dark-btn">🔗 공유</button>
+                    <button id="btn-share" class="action-btn dark-btn highlight-btn">📤 이미지 공유</button>
                 </div>
                 <button id="btn-retry" class="retry-btn">
                     <span>↻ 다시 뽑기</span>
                 </button>
             </div>
         </section>
+    </div>
+
+    <div id="fullscreen-modal" class="fullscreen-modal">
+        <img id="fullscreen-img" src="" alt="전체화면 이미지">
     </div>
 
     <script src="script.js"></script>
