--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="result-actions">
                 <div class="button-row">
                     <button id="btn-download" class="action-btn dark-btn">⬇ 저장</button>
-                    <button id="btn-share" class="action-btn dark-btn highlight-btn">📤 이미지 공유</button>
+                    <button id="btn-share" class="action-btn dark-btn highlight-btn">🔗 공유</button>
                 </div>
                 <button id="btn-retry" class="retry-btn">
                     <span>↻ 다시 뽑기</span>
@@ -77,7 +77,7 @@
     </div>
 
     <div id="fullscreen-modal" class="fullscreen-modal">
-        <img id="fullscreen-img" src="" alt="전체화면 이미지">
+        <img id="fullscreen-img" src="" alt="">
     </div>
 
     <script src="script.js"></script>
