--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>2026 새해를 여는 하나님의 말씀</title>
+    
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="2026 새해를 여는 하나님의 말씀">
+    <meta property="og:description" content="당신의 2026년 새해를 여는 말씀은 무엇인가요? 카드를 뽑아 확인해보세요.">
+    <meta property="og:image" content="https://csy870617.github.io/todaybible/logo.png">
+    <meta property="og:url" content="https://csy870617.github.io/todaybible/">
+
     <link rel="stylesheet" href="style.css">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
