--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>2026 나를 위한 하나님의 말씀</title>
+    
+    <title>하루말씀</title>
     
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="하루말씀">
