--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </div>
             </div>
 
-            <button id="btn-draw" class="primary-btn glow-effect">말씀 열어 보기</button>
+            <button id="btn-draw" class="primary-btn glow-effect">말씀카드 열어 보기</button>
         </section>
 
 
