--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>하루말씀</title>
     
+    <meta name="google-site-verification" content="EhqISFpzRIIw1YRrvtpfqYxOl6FZ1kDFSxpYAJY3p2c" />
+
     <link rel="icon" href="logo_1.png" type="image/png">
     <link rel="apple-touch-icon" href="logo_1.png">
     <link rel="shortcut icon" href="logo_1.png" type="image/png">
