--- a/index.html
+++ b/index.html
@@ -102,15 +102,16 @@
             
             <div class="result-actions">
                 <div class="button-row">
-                    <button id="btn-download" class="glass-btn btn-save">
-                        <span class="icon">⬇</span> <span class="label">이미지 저장</span>
+                    <button id="btn-send-card" class="glass-btn btn-save">
+                        <span class="icon">📤</span> <span class="label">말씀 보내기</span>
                     </button>
-                    <button id="btn-share" class="glass-btn btn-share">
-                        <span class="icon">🔗</span> <span class="label">친구와 공유</span>
+                    <button id="btn-retry" class="glass-btn btn-retry">
+                        <span class="icon">↻</span> 다른 말씀
                     </button>
                 </div>
-                <button id="btn-retry" class="glass-btn btn-retry">
-                    <span class="icon">↻</span> 다른 말씀 보기
+                
+                <button id="btn-share-site" class="glass-btn btn-share" style="width: 100%; margin-top: 5px;">
+                    <span class="icon">🔗</span> <span class="label">2026 말씀카드뽑기 공유</span>
                 </button>
             </div>
         </section>
