--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
             
             <div class="result-actions">
                 <div class="button-row">
-                    <button id="btn-send-card" class="glass-btn btn-save">
-                        <span class="icon">📤</span> <span class="label">말씀 보내기</span>
+                    <button id="btn-save-img" class="glass-btn btn-save">
+                        <span class="icon">⬇</span> <span class="label">말씀 저장</span>
                     </button>
                     <button id="btn-retry" class="glass-btn btn-retry">
                         <span class="icon">↻</span> 다른 말씀
@@ -111,7 +111,7 @@
                 </div>
                 
                 <button id="btn-share-site" class="glass-btn btn-share" style="width: 100%; margin-top: 5px;">
-                    <span class="icon">🔗</span> <span class="label">2026 말씀카드뽑기 공유</span>
+                    <span class="icon">🔗</span> <span class="label">친구에게 공유하기</span>
                 </button>
             </div>
         </section>
