--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="하루말씀">
-    <meta property="og:title" content="2026 NEW YEAR 말씀카드뽑기">
+    <meta property="og:title" content="2026 오늘의 말씀카드">
     <meta property="og:description" content="오늘 당신을 위한 말씀을 펼쳐보세요.">
     <meta property="og:image" content="https://csy870617.github.io/todaybible/thumbnail_4.png">
     <meta property="og:image:width" content="1280">
@@ -126,3 +126,4 @@
 </body>
 
 </html>
+
